--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.2
   receive_sharing_intent: ^1.4.0+2
+  url_launcher: ^5.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
