--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.2
   receive_sharing_intent: ^1.4.0+2
   url_launcher: ^5.5.0
+  awesome_dialog: ^1.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
