--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   receive_sharing_intent: ^1.4.0+2
   url_launcher: ^5.5.0
   awesome_dialog: ^1.1.3
+  provider: ^4.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
